@@ -53,6 +53,10 @@ if (file_exists($path_script_db))
     exec("mv -f $tmpDir/dialer_process/dialer/* /opt/elastix/dialer/",$arrConsole,$flagStatus);
     exec("sudo -u root chmod 755 /opt/",$arrConsole,$flagStatus);
  
+    exec("sudo -u root chmod 777 /etc/logrotate.d/",$arrConsole,$flagStatus);
+    exec("mv -f $tmpDir/installer/elastixdialer.logrotate /etc/logrotate.d/elastixdialer",$arrConsole,$flagStatus);
+    exec("sudo -u root chmod 755 /etc/logrotate.d/",$arrConsole,$flagStatus);
+
     exec("sudo -u root chmod 777 /etc/rc.d/init.d/",$arrConsole,$flagStatus);
     exec("mv $tmpDir/dialer_process/elastixdialer /etc/rc.d/init.d/",$arrConsole,$flagStatus);
     exec("sudo -u root chmod 755 /etc/rc.d/init.d/",$arrConsole,$flagStatus);
